// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextBoxPicture render with alt text 1`] = `
<div
  className="mfui-text-box-picture mfui-text-box-picture_margin_default"
>
  <img
    alt="alt text"
    className="mfui-text-box-picture__img"
    src="#"
  />
</div>
`;

exports[`TextBoxPicture render with big bottom margin 1`] = `
<div
  className="mfui-text-box-picture mfui-text-box-picture_margin_big-bottom"
>
  <img
    className="mfui-text-box-picture__img"
    src="#"
  />
</div>
`;

exports[`TextBoxPicture render with big top margin 1`] = `
<div
  className="mfui-text-box-picture mfui-text-box-picture_margin_big-top"
>
  <img
    className="mfui-text-box-picture__img"
    src="#"
  />
</div>
`;

exports[`TextBoxPicture render with big vertical margins 1`] = `
<div
  className="mfui-text-box-picture mfui-text-box-picture_margin_big-vertical"
>
  <img
    className="mfui-text-box-picture__img"
    src="#"
  />
</div>
`;

exports[`TextBoxPicture render with default props 1`] = `
<div
  className="mfui-text-box-picture mfui-text-box-picture_margin_default"
>
  <img
    className="mfui-text-box-picture__img"
    src="#"
  />
</div>
`;
